Test Sandbox Project/src/objects/Shop__c.object
<CustomObject>
    <fields>
        <fullName>Shop_Name__c</fullName>
        <label>Shop Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shop_Owner__c</fullName>
        <label>Shop Owner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Shop</relationshipLabel>
        <relationshipName>Shop</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Top_Ads_Amount__c</fullName>
        <label>Top Ads Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Top_Ads_Reg_Date__c</fullName>
        <label>Top Ads Reg Date</label>
        <type>DateTime</type>
    </fields>
    <label>Shop</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Shop-{000}</displayFormat>
        <label>Shop ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shop</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>